src/app/features/landing/expertise/expertise.scss
@use 'tokens/breakpoints' as breakpoints;

.line-break {
  display: block;
}

.expertise-subsection {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 64px 12px;
  max-width: var(--max-content-width);
  margin: 0 auto;

  &__identifier {
    font-family: var(--font-family-cabin);
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-semi-bold);
    color: var(--color-text);
    margin-bottom: 12px;
  }

  &__title {
    font-family: var(--font-family-lobster);
    font-size: var(--font-size-4xl);
    font-weight: var(--font-weight-regular);
    color: var(--color-text);
    text-align: center;
    margin-bottom: 24px;
  }

  &__subtitle {
    position: relative;
    font-family: var(--font-family-cabin);
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-regular);
    color: var(--color-text);
    text-align: center;
    line-height: 150%;
    margin-bottom: 48px;
  }
}

.expertise-subsection--services {
  .expertise-subsection-cards {
    place-items: center;
    gap: 0 32px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-template-rows: repeat(4, auto);
  }

  .expertise-subsection-card {
    width: 100%;
    max-width: 390px;
    padding: 0 12px;

    &__image {
      width: 100%;
      height: 210px;
      border-radius: var(--border-radius-md);
      margin-bottom: 24px;
      object-fit: cover;
      object-position: top right;
    }
  }
}

.expertise-subsection-cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-template-rows: repeat(4, auto);
  width: 100%;
  max-width: 500px;
}

.expertise-subsection-card {
  display: grid;
  grid-row: span 4;
  grid-template-rows: subgrid;
  place-items: center;
  align-items: flex-start;
  margin-bottom: 48px;

  &__image {
    width: 48px;
    height: 48px;
    margin-bottom: 24px;
  }

  &__title {
    font-family: var(--font-family-lobster);
    font-size: var(--font-size-3xl);
    font-weight: var(--font-weight-regular);
    color: var(--color-text);
    margin-bottom: 16px;
    text-align: center;
  }

  &__content {
    font-family: var(--font-family-cabin);
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-regular);
    color: var(--color-text);
    text-align: center;
    line-height: 150%;
  }
}

.expertise-subsection-ctas {
  display: flex;
  flex-direction: column;
  gap: 8px;
  width: 100%;
  max-width: 310px;
  margin-top: 12px;

  app-button {
    app-icon {
      display: none;
    }
  }
}

@media screen and (width > breakpoints.$bp-xs) {
  .expertise-subsection-card {
    &__title {
      .line-break {
        display: inline;
      }
    }
  }

  .expertise-subsection--services {
    .expertise-subsection-card {
      &__title {
        .line-break {
          display: block;
        }
      }
    }
  }
}

@media screen and (width > breakpoints.$bp-md) {
  .expertise-subsection-ctas {
    flex-direction: row;
    gap: 8px;
    width: 310px;
    max-width: unset;

    app-button {
      app-icon {
        display: block;
      }
    }
  }

  .expertise-subsection {
    &__title {
      font-size: var(--font-size-5xl);
    }

    &__subtitle {
      font-size: var(--font-size-lg);
    }
  }

  .expertise-subsection--services {
    .line-break {
      display: block;
    }
    .expertise-subsection-cards {
      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
      max-width: unset;
      gap: 0 16px;
    }

    .expertise-subsection-card {
      max-width: 400px;

      &:nth-child(odd) {
        place-self: end;
      }

      &:nth-child(even) {
        place-self: start;
      }

      &__image {
        width: 100%;
        height: 210px;
        border-radius: var(--border-radius-md);
        margin-bottom: 24px;
      }
    }
  }
}

@media screen and (width > breakpoints.$bp-lg) {
  .expertise-subsection-cards {
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-template-rows: repeat(4, auto);
    max-width: unset;
  }

  .expertise-subsection-card {
    &__title {
      .line-break {
        display: block;
      }
    }
  }

  .expertise-subsection--services {
    .expertise-subsection-cards {
      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    }

    .expertise-subsection-card {
      max-width: 450px;
    }
  }
}

